refactor: migração para Vite e reorganização da arquitetura do projeto
- Migração de Webpack para Vite para melhor performance de desenvolvimento
- Reorganização da estrutura de pastas seguindo feature-based architecture
- Conversão de arquivos JS para JSX
- Reorganização de componentes por features (auth, news)
- Atualizações na API para melhor tratamento de erros
- Adicionado GitHub Copilot instructions
- Removidas configurações antigas do Webpack